Fix contact button arrow overlapping: make ::after absolute positioned

--- a/css/index.css
+++ b/css/index.css
@@ -2672,7 +2672,6 @@ article[id] > .container > .desc em {
 @media screen and (max-width: 767px) {
   #contact .button a {
     width: 80vw;
-    padding-right: 4rem;
   }
   #contact .button a::before {
     right: 7rem;
@@ -2686,12 +2685,21 @@ article[id] > .container > .desc em {
 }
 #contact .button a::after {
   content: "";
-  display: inline-block;
+  position: absolute;
+  right: 2rem;
+  top: 50%;
+  transform: translateY(-50%);
+  display: block;
   width: 0;
   height: 0;
   border-left: calc(9 / 14.5 * 1em) solid currentColor;
   border-top: calc(6 / 14.5 * 1em) solid transparent;
   border-bottom: calc(6 / 14.5 * 1em) solid transparent;
+}
+@media screen and (min-width: 768px) {
+  #contact .button a::after {
+    right: 2.6rem;
+  }
 }
 #contact .button a:hover::after {
   -webkit-animation: arrow 0.4s ease;
